# collector

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile.collector  Dockerfile.nri-init  README.md  git-pull-request.sh  index.html  issue-cache-collection.md  issue-perf-ring-crate.md  sitemap.xml  testing-plan.md
.devcontainer/: Containerfile  devcontainer.json
.github/actions/aws-runner/: action.yml
.github/actions/nri-socket-exists/: action.yaml
.github/actions/setup-awscli/: action.yml
.github/actions/setup-k3s/: action.yml
.github/workflows/: benchmark-sync-timers.yml  benchmark.yaml  build-collector.yaml  build-component-artifacts.yaml  build-nri-init.yaml  check-instance-type-template.yaml  check-instance-types.yaml  ci.yaml  custom-kernel-test.yml  get-resctrl-and-perf-info.yaml  make-docs-to-gh-pages.yml  publish-helm-chart.yaml  resctrl-demo.yaml  reusable-helm-lint.yaml  reusable-rust-lint.yaml  reusable-test-collector.yaml  reusable-test-helm.yaml  reusable-test-nri.yaml  reusable-test-resctrl-collector.yaml  reusable-test-resctrl.yaml  reusable-unit-tests.yaml  rust-lints.yaml  tag-collector-latest.yaml  test-ebpf-collector.yaml  test-helm-chart.yaml  test-nri-helm.yaml  test-nri-init.yaml  test-nri-integration.yaml  test-nri-k3s.yaml  test-nri-kind.yaml  test-nri-restart.yaml  test-resctrl-collector-e2e.yaml  test-resctrl.yaml
architecture/decisions/2024-12-21-container-notifications/: index.html
architecture/decisions/2025-01-02-aws-test-runners/: index.html
architecture/decisions/2025-02-18-getting-cmt-measurements/: index.html
benchmark/: index.html
bpf-sync-timer/: index.html
charts/collector/: Chart.yaml  README.md  values.yaml
charts/collector/ci/: nri-configure-only-values.yaml  nri-disabled-values.yaml  nri-full-setup-values.yaml
charts/collector/scripts/: nri-init.sh
charts/collector/templates/: collector.yaml  configmap-nri-init.yaml
ci/aws-setup/: index.html
cmd/bpftracer/: main.go
cmd/prometheus_metrics/: collector_test.go  main.go  record_metrics.go
collection/: index.html
crates/bpf/: build.rs
crates/bpf-sync-timer/: Cargo.toml  build.rs
crates/bpf-sync-timer/include/: sync_timer.bpf.h  sync_timer_bitmap.bpf.h
crates/bpf-sync-timer/src/: lib.rs
crates/bpf-sync-timer/src/bpf/: sync_timer.bpf.c
crates/bpf/src/: lib.rs  sync_timer.rs
crates/bpf/tests/: cgroup_inode_test.rs
crates/collector/: Cargo.toml
crates/collector/src/: bpf_error_handler.rs  bpf_perf_to_timeslot.rs  bpf_perf_to_trace.rs  health_server.rs  main.rs  nri_enrich_recordbatch_task.rs  parquet_writer.rs  perf_event_processor.rs  task_completion_handler.rs  timeslot_to_recordbatch_task.rs
crates/nri/: build.rs
crates/nri-init/: Cargo.toml
crates/nri-init/src/: cmd.rs  containerd.rs  detect.rs  error.rs  k3s.rs  lib.rs  opts.rs  toml_util.rs  verify.rs
crates/nri-init/tests/: containerd.rs  integration_sim.rs  k3s.rs
crates/nri-resctrl-plugin/: Cargo.toml
crates/nri-resctrl-plugin/src/: lib.rs  pid_source.rs
crates/nri-resctrl-plugin/tests/: integration_test.rs
crates/nri/src/: examples.rs  lib.rs  metadata.rs  multiplex.rs
crates/nri/tests/: integration_test.rs  nri_plugin_test.rs
crates/perf_events/src/: dispatcher.rs  helpers.rs  map_reader.rs  mmap_storage.rs  (+2 more)
crates/resctrl/: Cargo.toml  README.md
crates/resctrl-collector/: Cargo.toml
crates/resctrl-collector/src/: lib.rs
crates/resctrl/src/: error.rs  lib.rs  provider.rs  test_utils.rs
crates/resctrl/tests/: smoke_test.rs
crates/tokio-helpers/: Cargo.toml
crates/tokio-utils/: Cargo.toml
crates/trace-analysis/: Cargo.toml
design/: index.html
devlog/: index.html
docs/: bpf-sync-timer.md  nri-resctrl-plugin.md  nri-setup.md
images/nri-init/: Dockerfile
noise-generators/: index.html
nri-resctrl-plugin/: index.html
nri-setup/: index.html
pipeline-implementation/: index.html
resctrl-guide/: index.html
s3-testing/: index.html
scratchpad/: issue-258.md
scripts/: extract_unresolved_pr_threads.py
search/: search_index.json
(+17 files in other folders)
