[package]
name = "nri-resctrl-plugin"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
nri = { workspace = true }
resctrl = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ttrpc = { workspace = true }
protobuf = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"

[dev-dependencies]
uuid = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
env_logger = { workspace = true }
resctrl = { workspace = true, features = ["test-utils"] }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
