[package]
name = "resctrl-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
nri = { workspace = true }
nri-resctrl-plugin = { workspace = true }
resctrl = { workspace = true }
humantime = { workspace = true }
tokio-utils = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time", "macros", "rt"] }
