[package]
name = "resctrl"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[features]
# Exposes test utilities (MockFs) for downstream tests.
test-utils = []
